--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -8,8 +8,8 @@
     <label class="col-sm-3 col-form-label">Nombre</label>
     <div class="col-sm-9">
       <input class="form-control" formControlName="name" placeholder="Nombre de la persona">
-      <span class="form-text text-danger">
-        error message
+      <span *ngIf="isValidField('name')" class="form-text text-danger">
+        {{getFieldError('name')}}
       </span>
     </div>
   </div>
@@ -45,7 +45,7 @@
             Eliminar
           </button>
         </div>
-        <span class="form-text text-danger">
+        <span *ngIf="isValidFieldInArray(favoriteGames,i)" class="form-text text-danger">
           Este campo es requerido
         </span>
 
