--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -20,10 +20,10 @@
     <div class="col-sm-9">
 
       <div class="input-group">
-        <input class="form-control" placeholder="Agregar favorito">
+        <input [formControl]="newFavorite" class="form-control" placeholder="Agregar favorito">
 
 
-        <button class="btn btn-outline-primary" type="button">
+        <button (click)="onAddToFavorite()" class="btn btn-outline-primary" type="button">
           Agregar favorito
         </button>
       </div>
@@ -71,13 +71,13 @@
 
 
 <span>Valid</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.valid | json }}</pre>
 <br>
 
 <span>Value</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.value| json }}</pre>
 <br>
 
 <span>Agregar Juego</span>
-<pre>{{ 'object' | json }}</pre>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ newFavorite.valid| json }}</pre>
+<pre>{{ newFavorite.value | json }}</pre>
